--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -143,7 +143,7 @@
     <script src="../src/js/script.js"></script>
     <script src="../src/js/donde-estoy.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active y después el color amarillo de fondo en CSS / Con JQuery-->
+    <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active / Con JQuery-->
     <script>
         $(function () {
             $('a').each(function () {
