changes inside index, style and script

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Letrero de error emergente -->
  <div id="mensaje-error" class="error" style="display: none;">
   <span>❌ VUELVE A INTENTARLO</span>
-  <img src="public/error.PNG" alt="Icono error" />
+  <img src="/public/error.PNG" alt="Icono error" />
  
 </div>
 
@@ -20,7 +20,7 @@
   <div class="contenedor">
     <!-- Imagen de la pregunta -->
     <div class="lado-izquierdo">
-      <img src="public/img-q1.PNG" alt="Símbolo K" class="imagen-k">
+      <img src="/public/img-q1.PNG" alt="Símbolo K" class="imagen-k">
     </div>
 
     <!-- Opciones de respuesta -->
@@ -31,6 +31,6 @@
     </ul>
   </div>
 
-  <script src="src/js/script.js"></script>
+  <script src="/src/js/script.js"></script>
 </body>
 </html>
