--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>K19</title>
   <link href="https://fonts.googleapis.com/css2?family=Kodchasan&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/src/css/style.css" />
+  <link rel="stylesheet" href="/src/css/style-index.css" />
 </head>
 <body>
 
