--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     </ul>
   </div>
 
-  <script src="/src/js/script.js"></script>
+  <script src="/src/js/scriptindex.js"></script>
 </body>
 </html>
