--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
- <header>
+  <header>
         <div id="logo-container">
             <a href="../index.html"><i id="arrow-left-header"></i>
                 <h1 id="pageTitle"><span id="atomic-numer">k<sup style="font-size: 0.6em"> 19</sup></span> POTASIO</h1>
@@ -20,14 +20,15 @@
         </div>
         <nav class="topnav" id="myTopnav">
             <ul>
-                <li><a href="../pages/que-soy.html">Qué soy</a></li>
-                <li><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
-                <li><a href="../pages/mi-importancia.html">Mi importancia</a></li>
-                <li><a href="../pages/curiosidades.html">Curiosidades</a></li>
-                <li><a href="../pages/actualidad.html">Actualidad</a></li>
-                <li><a href="../pages/creadoras.html">Creadoras</a></li>
+                <li id="que-soy-li-link"><a href="../pages/que-soy.html">Qué soy</a></li>
+                <li id="donde-estoy-li-link"><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
+                <li id="mi-importancia-li-link"><a href="../pages/mi-importancia.html">Mi importancia</a></li>
+                <li id="curiosidades-li-link"><a href="../pages/curiosidades.html">Curiosidades</a></li>
+                <li id="actualidad-li-link"><a href="../pages/actualidad.html">Actualidad</a></li>
+                <li id="creadoras-li-link"><a href="../pages/creadoras.html">Creadoras</a></li>
                 <li id="fa-bars-menu"><a href="javascript:void(0);" class="icon" onclick="responsiveNav()">
-                        <i class="fa fa-bars"></i></a></li>
+                        <i class="fa fa-bars" id="openMenu"></i>
+                    </a></li>
             </ul>
         </nav>
     </header>
@@ -157,7 +158,7 @@
             <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
         </div>
     </footer>
-    <script src="../src/js/script.js"></script>
+    <script src="/src/js/script.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active y después el color amarillo de fondo en CSS / Con JQuery-->
     <script>
