update de script y footer

--- a/pages/mi-importancia.html
+++ b/pages/mi-importancia.html
@@ -130,7 +130,7 @@
   </footer>
 
   <script src="../src/js/mi-importancia.js"></script>
-  `
+  <script src="../src/js/script.js"></script>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active / Con JQuery-->
   <script>
