fixed link on footer

--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -133,7 +133,7 @@
     <footer>
         <div id="footer-nav">
             <ul>
-                <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
+                <li><a href="../pages/que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
                 <li><a href="../pages/mi-importancia.html">Mi importancia<i id="arrow-right-footer"></i></a></li>
             </ul>
         </div>
