new scroll function

--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -53,9 +53,9 @@
                 fresas. Cada vez que me consumes, te ayudo a mantener el equilibrio de los líquidos en tu cuerpo y a
                 sentirte con más energía. ¡No me olvides, me necesitas más de lo que crees!
             </p>
-            <p class="pScrollDown"><a href="#foodCarousel">Haz click aquí para comenzar y ver dónde me puedes
+            <p class="pScrollDown" onclick="scrollDown1()">Haz click aquí para comenzar y ver dónde me puedes
                     encontrar<br>
-                    <i class="arrow-down"></i></a></p>
+                    <i class="arrow-down"></i></p>
             <div id="carousel">
                 <div class="carousel-item" id="foodCarousel">
                     <h5>Plátanos</h5>
@@ -88,10 +88,9 @@
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                <p class="pScrollDown"><a href="#foodCards">Continúa para ver más alimentos<br>
-                        <i class="arrow-down"></i></a></p>
+                <p class="pScrollDown" onclick="scrollDown2()">Continúa para ver más alimentos<br>
+                        <i class="arrow-down"></i></p>
             </div>
-
         </div>
         <div id="foodCards">
             <h3>Alimentación</h3>
