--- a/pages/curiosidades.html
+++ b/pages/curiosidades.html
@@ -35,7 +35,7 @@
     </section>
     <section class="cards-container">
         <article class="card" data-truth="true">
-            <p>El potasio reacciona con el agua, explota y arde con una llama lila por la rápida liberación de hidrógeno</p>
+            <p>El potasio  reacciona con el agua, explota y arde con una llama lila por la rápida liberación de hidrógeno.</p>
         </article>
         <article class="card" data-truth="false" data-correct="El potasio se encuentra en muchos alimentos, no solo en plátanos. Es esencial para el cuerpo humano.">
             <p>El potasio se encuentra exclusivamente en los plátanos, es la única fuente que tiene el ser humano de ingerirlo en alimentos</p>
