--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -153,8 +153,8 @@
 <footer>
         <div id="footer-nav">
             <ul>
-                <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
-                <li><a href="../pages/mi-importancia.html">Mi importancia<i id="arrow-right-footer"></i></a></li>
+                <li><a href="../index.html"><i id="arrow-left-footer"></i>Inicio</a></li>
+                <li><a href="../pages/donde-estoy.html">Dónde estoy<i id="arrow-right-footer"></i></a></li>
             </ul>
         </div>
         <div id="footer-info">
