fixed wrong footer links on some pages

--- a/pages/actualidad.html
+++ b/pages/actualidad.html
@@ -137,8 +137,8 @@
   <footer>
     <div id="footer-nav">
       <ul>
-        <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
-        <li><a href="../pages/mi-importancia.html">Mi importancia<i id="arrow-right-footer"></i></a></li>
+        <li><a href="../pages/curiosidades.html"><i id="arrow-left-footer"></i>Curiosidades</a></li>
+        <li><a href="../pages/creadoras.html">Creadoras<i id="arrow-right-footer"></i></a></li>
       </ul>
     </div>
     <div id="footer-info">
