--- a/pages/creadoras.html
+++ b/pages/creadoras.html
@@ -128,8 +128,7 @@
     <footer>
         <div id="footer-nav">
             <ul>
-                <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
-                <li><a href="../pages/mi-importancia.html">Mi importancia<i id="arrow-right-footer"></i></a></li>
+                <li><a href="../pages/actualidad.html"><i id="arrow-left-footer"></i>Actualidad</a></li>
             </ul>
         </div>
         <div id="footer-info">
