--- a/pages/mi-importancia.html
+++ b/pages/mi-importancia.html
@@ -120,7 +120,7 @@
     <footer>
       <div id="footer-nav">
         <ul>
-          <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
+          <li><a href="../pages/donde-estoy.html"><i id="arrow-left-footer"></i>Dónde estoy</a></li>
           <li><a href="../pages/curiosidades.html">Curiosidades<i id="arrow-right-footer"></i></a></li>
         </ul>
       </div>
