--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -153,7 +153,7 @@
 <footer>
         <div id="footer-nav">
             <ul>
-                <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
+                <li><a href="../index.html"><i id="arrow-left-footer"></i>Inicio</a></li>
                 <li><a href="../pages/mi-importancia.html">Mi importancia<i id="arrow-right-footer"></i></a></li>
             </ul>
         </div>
