fixed link on footer

--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -154,7 +154,7 @@
         <div id="footer-nav">
             <ul>
                 <li><a href="../index.html"><i id="arrow-left-footer"></i>Inicio</a></li>
-                <li><a href="../pages/mi-importancia.html">Mi importancia<i id="arrow-right-footer"></i></a></li>
+                <li><a href="../pages/donde-estoy.html">Dónde estoy<i id="arrow-right-footer"></i></a></li>
             </ul>
         </div>
         <div id="footer-info">
