--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -69,7 +69,7 @@
                         El plátano es una excelente fuente de potasio, clave para músculos, nervios y presión arterial.
                         Además, es fácil de consumir y muy energético.
                     </p>
-                    <img src="../public/banana-carousel.png" alt="Bananas">
+                    <img src="../public/bananas.png" alt="Bananas">
                 </div>
                 <div class="carousel-item">
                     <h5>Espinacas</h5>
@@ -77,7 +77,7 @@
                         La espinaca aporta potasio, esencial para músculos y nervios. También es baja en calorías y rica
                         en nutrientes.
                     </p>
-                    <img src="../public/espinaca.jpg" alt="Espinacas">
+                    <img src="../public/espinaca.png" alt="Espinacas">
                 </div>
                 <div class="carousel-item">
                     <h5>Aguacate</h5>
@@ -85,7 +85,7 @@
                         El aguacate es rico en potasio, que ayuda a regular músculos y presión arterial. También aporta
                         grasas saludables y fibra.
                     </p>
-                    <img src="../public/aguacate-carousel.png" alt="Aguacate">
+                    <img src="../public/avocado.png" alt="Aguacate">
                 </div>
             </div>
             <div id="carousel-nav">
