add timer and score

--- a/pages/curiosidades.html
+++ b/pages/curiosidades.html
@@ -33,7 +33,7 @@
         <h2>VAMOS A JUGAR: ¿VERDADERO O FALSO?</h2>
             <p class="subtitle">Haz click en las afirmaciones sobre el potasio que creas que son correctas.</p>
     </section>
-    <section class="timer">
+    <section class="game-stats">
         <p id="timer">Tiempo: 30</p>
         <p id="score">Puntos: 0</p>
     </section>
