--- a/pages/creadoras.html
+++ b/pages/creadoras.html
@@ -54,17 +54,17 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Luisa Silva Matínez</h2>
-                    <img src="../public/me.PNG" alt="me" class="lulupicture">
+                    <h2 class="name">Irina Tiron</h2>
+                    <img src="../public/irina.jpeg" alt="irina" class="irinapicture">
                 </div>
                 <div class="card-back">
-                    <a href="https://www.linkedin.com/in/luisa-silva-martinez" target="_blank">
+                    <a href="https://www.linkedin.com/in/irinatiron/" target="_blank">
                         <img src="../public/linkedin.webp" class="linkpicture">
                         <p class="linkedin">linkedin</p>
                     </a>
-                    <a href="mailto:luiasilvamartinez1999@gmail.com">
+                    <a href="mailto:irinatiron.dev@gmail.com">
                         <img src="../public/email.avif" class="emailpicture">
-                        <p class="email">luisasilvamartinez@gmail.com</p>
+                        <p class="email">irinatiron.dev@gmail.com</p>
                     </a>       
                 </div>
             </div>
