--- a/pages/mi-importancia.html
+++ b/pages/mi-importancia.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  ` <header>
+  <header>
     <div id="logo-container">
       <a href="../index.html"><i id="arrow-left-header"></i>
         <h1 id="pageTitle"><span id="atomic-numer">k<sup style="font-size: 0.6em"> 19</sup></span> POTASIO</h1>
@@ -30,7 +30,7 @@
           </a></li>
       </ul>
     </nav>
-  </header>`
+  </header>
 
   <main>
 
@@ -38,11 +38,13 @@
       <div class="contenedor-flex">
         <div class="texto-potencia">
           <h1 class="titulo-potencia">
-            Ya sabes quién soy y dónde estoy,ahora hablemos de por qué soy TAN IMPORTANTE
+            Mi importancia
           </h1>
           <p>
-            Soy fundamental para el cuerpo humano porque participo en procesos vitales que permiten que nuestro
-            organismo funcione correctamente. Sin mí, simplemente no podríamos vivir. 😎
+            Ya sabes quién soy y dónde estoy, pero ahora es momento de descubrir por qué SOY TAN ESENCIAL para ti. Soy
+            clave para que tu cuerpo funcione al 100%, participando en procesos vitales como el equilibrio de líquidos,
+            la transmisión nerviosa y la contracción muscular. Sin mí, tu organismo no podría mantener su energía ni su
+            ritmo de vida. ¡Así de importante soy!
           </p>
         </div>
         <div class="imagen-potencia">
@@ -112,20 +114,24 @@
       <h2>¿Qué tal te llevas con el potasio?</h2>
       <div id="nivel"></div>
       <p id="recomendacion"></p>
+
+
+      <button id="btnVolverInicio">Volver al inicio</button>
+    </section>
     </section>
 
   </main>
 
-    <footer>
-      <div id="footer-nav">
-        <ul>
-          <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
-          <li><a href="../pages/curiosidades.html">Curiosidades<i id="arrow-right-footer"></i></a></li>
-        </ul>
-      </div>
-      <div id="footer-info">
-        <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
-      </div>
+  <footer>
+    <div id="footer-nav">
+      <ul>
+        <li><a href="../que-soy.html"><i id="arrow-left-footer"></i>Qué soy</a></li>
+        <li><a href="../pages/curiosidades.html">Curiosidades<i id="arrow-right-footer"></i></a></li>
+      </ul>
+    </div>
+    <div id="footer-info">
+      <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
+    </div>
     <p>© 2025 Importancia del Potasio. Aprende, cuida y vive saludable.</p>
   </footer>
 
