add valentina info

--- a/pages/creadoras.html
+++ b/pages/creadoras.html
@@ -110,17 +110,15 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Luisa Silva Matínez</h2>
-                    <img src="../public/me.PNG" alt="me" class="lulupicture">
+                    <h2 class="name">Valentina Montilla</h2>
+                    <img src="../public/valentina.jpeg" alt="valentina" class="valentinapicture">
                 </div>
                 <div class="card-back">
-                    <a href="https://www.linkedin.com/in/luisa-silva-martinez" target="_blank">
-                        <img src="../public/linkedin.webp" class="linkpicture">
-                        <p class="linkedin">linkedin</p>
+                    
                     </a>
-                    <a href="mailto:luiasilvamartinez1999@gmail.com">
+                    <a href="mailto:valenmontillaes@gmail.com">
                         <img src="../public/email.avif" class="emailpicture">
-                        <p class="email">luisasilvamartinez@gmail.com</p>
+                        <p class="email">valenmontillaes@gmail.com</p>
                     </a>     
                 </div>
             </div>
