--- a/pages/creadoras.html
+++ b/pages/creadoras.html
@@ -38,8 +38,8 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Nicole Guevara</h2>
-                    <img src="../public/nicole.jpg" alt="me" class="nicole-picture">
+                    <h2 class="name">Nicole<br>Guevara</h2>
+                    <img src="../public/nicole.jpg" alt="me" class="picture">
                 </div>
                 <div class="card-back">
                     <a href="https://www.linkedin.com/in/nicole-guevara-gutierres-7160b236b/" target="_blank">
@@ -56,8 +56,8 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Irina Tiron</h2>
-                    <img src="../public/irina.jpeg" alt="irina" class="irinapicture">
+                    <h2 class="name">Irina<br> Tiron</h2>
+                    <img src="../public/irina.jpg" alt="irina" class="picture">
                 </div>
                 <div class="card-back">
                     <a href="https://www.linkedin.com/in/irinatiron/" target="_blank">
@@ -74,8 +74,8 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Gabriela </h2>
-                    <img src="../public/gabriela.jpg" alt="gabriela" class="gabrielapicture">
+                    <h2 class="name">Gabriela Hernández </h2>
+                    <img src="../public/gabriela.jpg" alt="gabriela" class="picture">
                 </div>
                 <div class="card-back">
                     <a href="https://www.linkedin.com/in/arianna-hernandez-berbesi-67aa491b3/" target="_blank">
@@ -92,8 +92,8 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Luisa Silva Matínez</h2>
-                    <img src="../public/me.PNG" alt="me" class="lulupicture">
+                    <h2 class="name">Luisa<br>Silva</h2>
+                    <img src="../public/lulu.jpg" alt="me" class="picture">
                 </div>
                 <div class="card-back">
                     <a href="https://www.linkedin.com/in/luisa-silva-martinez" target="_blank">
@@ -110,8 +110,8 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Valentina Montilla</h2>
-                    <img src="../public/valentina.jpeg" alt="valentina" class="valentinapicture">
+                    <h2 class="name">Valentina<br> Montilla</h2>
+                    <img src="../public/valentina.jpg" alt="valentina" class="picture">
                 </div>
                 <div class="card-back">
                     
