changed intro text

--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -49,7 +49,7 @@
         <div id="carousel-container">
             <h2>Dónde estoy</h2>
             <div id="divIntro">
-                <p id="pIntro">¡Hola! Soy el potasio, un mineral esencial que ayuda a que tus músculos, nervios y
+                <p id="pIntro"><span style="font-size: 1.5em;">¡Hola!   </span> Soy el <span style="font-weight: bold; font-size: 1.3em;">potasio</span>, un mineral esencial que ayuda a que tus músculos, nervios y
                     corazón
                     funcionen bien. Me puedes encontrar en frutas deliciosas como el plátano, la naranja, el aguacate y
                     las
