--- a/pages/actualidad.html
+++ b/pages/actualidad.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="../src/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -111,11 +113,8 @@
           sostenible y económica que las de litio, con potencial para almacenamiento a gran escala.</p>
       </div>
     </div>
-  
-    <button class="boton-potasio">
-  ¡Ven juguemos a mezclar elementos con el potasio!
-</button>
-
+  </div>
+</div>
   </main>
   <footer>
     <div id="footer-nav">
