fixing a couple of things on que-soy page about the flexibility of the page and also fix the images on the cards at the button of the page

--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -121,7 +121,7 @@
   <div class="card" id="card2">
     <div class="card-inner">
       <div class="face front">
-         <img src="/public/Potassiumballs.jpg" alt="Imagen Tarjeta 2" />
+         <img src="/public/Potassiumballs.PNG" alt="Imagen Tarjeta 2" />
       </div>
     <div class="face back">
       <p>El potasio posee un brillo plateado distintivo y es extremadamente blando, lo que permite cortarlo con facilidad usando un cuchillo. No obstante, al exponerse al aire se oxida con rapidez y pierde su brillo.</p>
@@ -132,10 +132,10 @@
 
 
 <div class="Mazo-tarjetas">
-  <div class="card" id="card2">
+  <div class="card" id="card3">
     <div class="card-inner">
       <div class="face front">
-         <img src="/public/potaxio.PNG" alt="Imagen Tarjeta 3" />
+         <img src="/public/avohero.PNG" alt="Imagen Tarjeta 3" />
       </div>
     <div class="face back">
       <p>El potasio es un micronutriente esencial para la vida. En el cuerpo humano representa aproximadamente el 0,4% del peso corporal, y su ausencia impediría el correcto funcionamiento del organismo.</div>
