--- a/pages/creadoras.html
+++ b/pages/creadoras.html
@@ -74,7 +74,7 @@
         <article class="card-flip">
             <div class="card-inner">
                 <div class="card-front">
-                    <h2 class="name">Gabriela Hernández </h2>
+                    <h2 class="name">Gabriela<br>Hernández </h2>
                     <img src="../public/gabriela.jpg" alt="gabriela" class="picture">
                 </div>
                 <div class="card-back">
