--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <title>El Potasio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link
-        href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
+    href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="../src/css/style.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/src/css/que-soy.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
 
 
   <header>
-        <div id="logo-container">
-            <a href="../index.html"><i id="arrow-left-header"></i>
-                <h1 id="pageTitle"><span id="atomic-numer">k<sup style="font-size: 0.6em"> 19</sup></span> POTASIO</h1>
-            </a>
-        </div>
-        <nav class="topnav" id="myTopnav">
-            <ul>
-                <li id="que-soy-li-link"><a href="../pages/que-soy.html">Qué soy</a></li>
-                <li id="donde-estoy-li-link"><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
-                <li id="mi-importancia-li-link"><a href="../pages/mi-importancia.html">Mi importancia</a></li>
-                <li id="curiosidades-li-link"><a href="../pages/curiosidades.html">Curiosidades</a></li>
-                <li id="actualidad-li-link"><a href="../pages/actualidad.html">Actualidad</a></li>
-                <li id="creadoras-li-link"><a href="../pages/creadoras.html">Creadoras</a></li>
-                <li id="fa-bars-menu"><a href="javascript:void(0);" class="icon" onclick="responsiveNav()">
-                        <i class="fa fa-bars" id="openMenu"></i>
-                    </a></li>
-            </ul>
-        </nav>
-    </header>
-<script src="/src/js/script.js"></script>
+    <div id="logo-container">
+      <a href="../index.html"><i id="arrow-left-header"></i>
+        <h1 id="pageTitle"><span id="atomic-numer">k<sup style="font-size: 0.6em"> 19</sup></span> POTASIO</h1>
+      </a>
+    </div>
+    <nav class="topnav" id="myTopnav">
+      <ul>
+        <li id="que-soy-li-link"><a href="../pages/que-soy.html">Qué soy</a></li>
+        <li id="donde-estoy-li-link"><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
+        <li id="mi-importancia-li-link"><a href="../pages/mi-importancia.html">Mi importancia</a></li>
+        <li id="curiosidades-li-link"><a href="../pages/curiosidades.html">Curiosidades</a></li>
+        <li id="actualidad-li-link"><a href="../pages/actualidad.html">Actualidad</a></li>
+        <li id="creadoras-li-link"><a href="../pages/creadoras.html">Creadoras</a></li>
+        <li id="fa-bars-menu"><a href="javascript:void(0);" class="icon" onclick="responsiveNav()">
+            <i class="fa fa-bars" id="openMenu"></i>
+          </a></li>
+      </ul>
+    </nav>
+  </header>
+  <script src="/src/js/script.js"></script>
 
 
   <div class="letrero">
     <div class="contenido">
-    <img src="/public/correcto.PNG" alt="Imagen de Mendeleyev">
+      <img src="/public/correcto.PNG" alt="Imagen de Mendeleyev">
       <span class="animate__animated animate__bounceInDown">🎉¡Así es! Soy el potasio!</span>
     </div>
   </div>
@@ -50,120 +52,137 @@
     <div class="texto">
       <p>
         El potasio es un elemento químico representado en la tabla periódica con el símbolo K, derivada del latín
-        <strong>Kalium</strong> que a su vez proviene del árabe <strong>al-galya</strong>, que significa "ceniza de plantas".<br><br>
-        Tiene un número atómico de 19. Es un metal alcalino de tono blanco plateado, que se encuentra comúnmente en la naturaleza,
+        <strong>Kalium</strong> que a su vez proviene del árabe <strong>al-galya</strong>, que significa "ceniza de
+        plantas".<br><br>
+        Tiene un número atómico de 19. Es un metal alcalino de tono blanco plateado, que se encuentra comúnmente en la
+        naturaleza,
         especialmente en compuestos presentes en el agua salada y en diversos minerales.<br><br>
       </p>
     </div>
-  
-      <img src="/public/Potasiomol.gif" class="imagen" alt="Potasiomol">
+
+    <img src="/public/Potasiomol.gif" class="imagen" alt="Potasiomol">
 
   </div>
 
 
   <table class="tabla-potasio">
-  <thead>
-    <tr>
-      <th>Propiedades</th>
-      <th>Potasio (K)</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Símbolo químico</td>
-      <td>K</td>
-    </tr>
-    <tr>
-      <td>Número atómico</td>
-      <td>19</td>
-    </tr>
-    <tr>
-      <td>Masa atómica</td>
-      <td>39.10 u</td>
-    </tr>
-    <tr>
-      <td>Estado en condiciones normales</td>
-      <td>Sólido</td>
-    </tr>
-    <tr>
-      <td>Color</td>
-      <td>Blanco plateado</td>
-    </tr>
-    <tr>
-      <td>Grupo</td>
-      <td>Alcalino</td>
-    </tr>
-    <tr>
-      <td>Densidad</td>
-      <td>0.86 g/cm³</td>
-    </tr>
-    <tr>
-      <td>Punto de fusión</td>
-      <td>63.5 °C</td>
-    </tr>
-  </tbody>
-</table>
+    <thead>
+      <tr>
+        <th>Propiedades</th>
+        <th>Potasio (K)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Símbolo químico</td>
+        <td>K</td>
+      </tr>
+      <tr>
+        <td>Número atómico</td>
+        <td>19</td>
+      </tr>
+      <tr>
+        <td>Masa atómica</td>
+        <td>39.10 u</td>
+      </tr>
+      <tr>
+        <td>Estado en condiciones normales</td>
+        <td>Sólido</td>
+      </tr>
+      <tr>
+        <td>Color</td>
+        <td>Blanco plateado</td>
+      </tr>
+      <tr>
+        <td>Grupo</td>
+        <td>Alcalino</td>
+      </tr>
+      <tr>
+        <td>Densidad</td>
+        <td>0.86 g/cm³</td>
+      </tr>
+      <tr>
+        <td>Punto de fusión</td>
+        <td>63.5 °C</td>
+      </tr>
+    </tbody>
+  </table>
 
 
-<div class="card visible" id="card1">
-  <div class="card-inner">
-    <div class="face front">
-      <img src="/public/potacio-explo copy.PNG" alt="Imagen Tarjeta 1" />
-    </div>
-    <div class="face back">
-     <p>Este metal tiene una reacción muy energética cuando se encuentra en lugares con humedad o entra en contacto con el agua. La reacción es tan intensa que puede provocar explosiones y genera una llama de tono violeta claro.
+  <div class="card visible" id="card1">
+    <div class="card-inner">
+      <div class="face front">
+        <img src="/public/potacio-explo copy.PNG" alt="Imagen Tarjeta 1" />
+      </div>
+      <div class="face back">
+        <p>Este metal tiene una reacción muy energética cuando se encuentra en lugares con humedad o entra en contacto
+          con el agua. La reacción es tan intensa que puede provocar explosiones y genera una llama de tono violeta
+          claro.
         </p>
-    </div>
-  </div>
-</div>
-
-<div class="Mazo-tarjetas">
-  <div class="card" id="card2">
-    <div class="card-inner">
-      <div class="face front">
-         <img src="/public/Potassiumballs.PNG" alt="Imagen Tarjeta 2" />
       </div>
-    <div class="face back">
-      <p>El potasio posee un brillo plateado distintivo y es extremadamente blando, lo que permite cortarlo con facilidad usando un cuchillo. No obstante, al exponerse al aire se oxida con rapidez y pierde su brillo.</p>
     </div>
   </div>
-</div>
 
-
-
-<div class="Mazo-tarjetas">
-  <div class="card" id="card3">
-    <div class="card-inner">
-      <div class="face front">
-         <img src="/public/avohero.PNG" alt="Imagen Tarjeta 3" />
+  <div class="Mazo-tarjetas">
+    <div class="card" id="card2">
+      <div class="card-inner">
+        <div class="face front">
+          <img src="/public/Potassiumballs.PNG" alt="Imagen Tarjeta 2" />
+        </div>
+        <div class="face back">
+          <p>El potasio posee un brillo plateado distintivo y es extremadamente blando, lo que permite cortarlo con
+            facilidad usando un cuchillo. No obstante, al exponerse al aire se oxida con rapidez y pierde su brillo.</p>
+        </div>
       </div>
-    <div class="face back">
-      <p>El potasio es un micronutriente esencial para la vida. En el cuerpo humano representa aproximadamente el 0,4% del peso corporal, y su ausencia impediría el correcto funcionamiento del organismo.</div>
     </div>
-  </div>
-</div>
-
-<button id="siguiente" class="boton-siguiente">✨Dame clic!✨ (pero primero da clic a la tarjeta)</button>
 
 
-  <script src="/src/js/que-soy.js"></script>
 
-  <script>
-    console.log("¡Bienvenido al mundo del potasio!");
-  </script>
-  
-<footer>
-        <div id="footer-nav">
-            <ul>
-                <li><a href="../index.html"><i id="arrow-left-footer"></i>Inicio</a></li>
-                <li><a href="../pages/donde-estoy.html">Dónde estoy<i id="arrow-right-footer"></i></a></li>
-            </ul>
+    <div class="Mazo-tarjetas">
+      <div class="card" id="card3">
+        <div class="card-inner">
+          <div class="face front">
+            <img src="/public/avohero.PNG" alt="Imagen Tarjeta 3" />
+          </div>
+          <div class="face back">
+            <p>El potasio es un micronutriente esencial para la vida. En el cuerpo humano representa aproximadamente el
+              0,4% del peso corporal, y su ausencia impediría el correcto funcionamiento del organismo.
+          </div>
         </div>
-        <div id="footer-info">
-            <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
-        </div>
+      </div>
+    </div>
+
+    <button id="siguiente" class="boton-siguiente">✨Dame clic!✨ (pero primero da clic a la tarjeta)</button>
+
+
+    <script src="/src/js/que-soy.js"></script>
+
+    <script>
+      console.log("¡Bienvenido al mundo del potasio!");
+    </script>
+
+    <footer>
+      <div id="footer-nav">
+        <ul>
+          <li><a href="../index.html"><i id="arrow-left-footer"></i>Inicio</a></li>
+          <li><a href="../pages/donde-estoy.html">Dónde estoy<i id="arrow-right-footer"></i></a></li>
+        </ul>
+      </div>
+      <div id="footer-info">
+        <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
+      </div>
     </footer>
-<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active / Con JQuery-->
+    <script>
+      $(function () {
+        $('a').each(function () {
+          if ($(this).prop('href') == window.location.href) {
+            $(this).addClass('active'); $(this).parents('li').addClass('active');
+          }
+        });
+      });
+    </script>
 </body>
+
 </html>
